RESOLVED FIXED185835
Unable to remove IndexedDB Databases with Cocoa API removeDataOfTypes
https://bugs.webkit.org/show_bug.cgi?id=185835
Summary Unable to remove IndexedDB Databases with Cocoa API removeDataOfTypes
Sihui Liu
Reported 2018-05-21 13:38:07 PDT
Using removeDataOfType to clear all data of specific origins would fail to delete IndexedDB database files.
Attachments
Patch (1.60 KB, patch)
2018-05-21 13:54 PDT, Sihui Liu
no flags
Patch (5.10 KB, patch)
2018-05-22 14:42 PDT, Sihui Liu
no flags
Patch for landing (5.14 KB, patch)
2018-05-28 23:05 PDT, Sihui Liu
no flags
Patch (5.14 KB, patch)
2018-05-28 23:08 PDT, Sihui Liu
no flags
Sihui Liu
Comment 1 2018-05-21 13:45:52 PDT
Sihui Liu
Comment 2 2018-05-21 13:54:17 PDT
Geoffrey Garen
Comment 3 2018-05-21 14:00:24 PDT
Can you add an API test for this? We generally require a regression test for all behavior changes. This seems to be a case where the test truly is more valuable than the code, since the mistake in the code was so basic.
Brady Eidson
Comment 4 2018-05-21 14:28:48 PDT
Comment on attachment 340883 [details] Patch I'll go farther than Geoff and say r- until there's a test
Sihui Liu
Comment 5 2018-05-22 14:42:08 PDT
Sihui Liu
Comment 6 2018-05-28 23:05:43 PDT
Created attachment 341474 [details] Patch for landing
WebKit Commit Bot
Comment 7 2018-05-28 23:06:40 PDT
Comment on attachment 341474 [details] Patch for landing Rejecting attachment 341474 [details] from commit-queue. Failed to run "['/Volumes/Data/EWS/WebKit/Tools/Scripts/webkit-patch', '--status-host=webkit-queues.webkit.org', '--bot-id=webkit-cq-03', 'validate-changelog', '--check-oops', '--non-interactive', 341474, '--port=mac']" exit_code: 1 cwd: /Volumes/Data/EWS/WebKit ChangeLog entry in Source/WebKit/ChangeLog contains OOPS!. Full output: http://webkit-queues.webkit.org/results/7842096
Sihui Liu
Comment 8 2018-05-28 23:08:56 PDT
WebKit Commit Bot
Comment 9 2018-05-29 09:12:28 PDT
Comment on attachment 341475 [details] Patch Clearing flags on attachment: 341475 Committed r232258: <https://trac.webkit.org/changeset/232258>
WebKit Commit Bot
Comment 10 2018-05-29 09:12:29 PDT
All reviewed patches have been landed. Closing bug.
Note You need to log in before you can comment on or make changes to this bug.