Unable to remove IndexedDB Databases with Cocoa API removeDataOfTypes https://bugs.webkit.org/show_bug.cgi?id=185835 <rdar://problem/39142257>

Reviewed by Chris Dumez.

Source/WebKit:

Fix a wrong if condition: databases should be closed and deleted if websiteDataTypes contains
WebsiteDataType::IndexedDBDatabases.

* StorageProcess/StorageProcess.cpp:
(WebKit::StorageProcess::deleteWebsiteDataForOrigins):

Tools:

Add API test coverage.

* TestWebKitAPI/Tests/WebKitCocoa/IndexedDBPersistence.mm:
(TEST):


Canonical link: https://commits.webkit.org/201482@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@232258 268f45cc-cd09-0410-ab3c-d52691b4dbfc